syntax = "proto3";

package omniql;

option go_package = "github.com/omniql-engine/omniql/utilities/proto";

// ============================================
// üåê UNIVERSAL QUERY (Supports All Databases)
// ============================================

message UniversalQuery {
    oneof query_type {
        RelationalQuery relational = 1;  // PostgreSQL, MySQL, SQLite
        DocumentQuery document = 2;      // MongoDB
        KeyValueQuery key_value = 3;     // Redis
    }
}

// ============================================
// üè¶ RELATIONAL QUERY (SQL Databases)
// ============================================

message RelationalQuery {
    string operation = 1;
    string table = 2;
    repeated QueryCondition conditions = 3;
    repeated QueryField fields = 4;
    int32 limit = 5;
    int32 offset = 6;
    bool distinct = 34;
    string transaction_id = 35;
    
    repeated JoinClause joins = 7;
    AggregateClause aggregate = 8;
    repeated string group_by = 9;
    repeated QueryCondition having = 10;
    repeated OrderByClause order_by = 11;
    
    string savepoint_name = 12;
    repeated string permissions = 13;
    string permission_target = 14;
    string role_name = 15;
    
    repeated WindowClause window_functions = 16;
    CTEClause cte = 17;
    SubqueryClause subquery = 18;
    string pattern = 19;
    CaseClause case_when = 20;
    
    string isolation_level = 21;
    bool read_only = 22;
    
    UpsertClause upsert = 23;
    repeated BulkInsertRow bulk_data = 24;
    
    string view_name = 25;
    string view_query = 26;
    string database_name = 27;
    string new_name = 28;
    
    string user_name = 29;
    string password = 30;
    repeated string user_roles = 31;
    
    SetOperationClause set_operation = 32;
    repeated string columns = 33;
    repeated SelectColumn select_columns = 36;
    string session_id = 37;
    string sql = 38;
}

// ============================================
// üè≠ DOCUMENT QUERY (MongoDB)
// ============================================

message DocumentQuery {
    string operation = 1;
    string collection = 2;
    repeated QueryCondition conditions = 3;
    repeated QueryField fields = 4;
    int32 limit = 5;
    int32 skip = 6;
    
    repeated JoinClause joins = 7;
    AggregateClause aggregate = 8;
    repeated string group_by = 9;
    repeated OrderByClause order_by = 10;
    
    string savepoint_name = 11;
    repeated string permissions = 12;
    string permission_target = 13;
    string role_name = 14;
    
    repeated WindowClause window_functions = 15;
    string pattern = 16;
    CaseClause case_when = 17;
    
    string isolation_level = 18;
    bool read_only = 19;
    
    UpsertClause upsert = 20;
    repeated BulkInsertRow bulk_data = 21;
    
    string view_name = 22;
    string view_query = 23;
    string database_name = 24;
    
    string user_name = 25;
    string password = 26;
    repeated string user_roles = 27;
    string new_name = 28;
    SetOperationClause set_operation = 29;
    repeated string columns = 30;
    repeated SelectColumn select_columns = 31;
    string session_id = 32;
    repeated QueryCondition having = 33;
    bool distinct = 34;
    string query = 35;
}

// ============================================
// ‚ö° KEY-VALUE QUERY (Redis)
// ============================================

message KeyValueQuery {
    string command = 1;
    string key = 2;
    repeated string args = 3;
    repeated KeyValuePair bulk_pairs = 4;
    string session_id = 5;
    string command_string = 6;
}

message KeyValuePair {
    string key = 1;
    string value = 2;
}

// ============================================
// üìä SHARED STRUCTURES
// ============================================

message QueryCondition {
    string field = 1;
    string operator = 2;
    string value = 3;
}

message QueryField {
    string name = 1;
    string value = 2;
    repeated string constraints = 3;
    
    oneof field_type {
        string literal_value = 4;
        FieldExpression expression = 5;
    }
}

message FieldExpression {
    string expression_type = 1;
    string left_operand = 2;
    string operator = 3;
    string right_operand = 4;
    bool left_is_field = 5;
    bool right_is_field = 6;
    string function_name = 7;
    repeated string function_args = 8;
    repeated CaseCondition case_conditions = 9;
    string case_else = 10;
}

message CaseCondition {
    string condition = 1;
    string then_value = 2;
}

message SelectColumn {
    string expression = 1;
    string alias = 2;
    FieldExpression expression_obj = 3;
}

message JoinClause {
    string join_type = 1;
    string table = 2;
    string left_field = 3;
    string right_field = 4;
}

message AggregateClause {
    string function = 1;
    string field = 2;
}

message OrderByClause {
    string field = 1;
    string direction = 2;
}

message WindowClause {
    string function = 1;
    string alias = 2;
    repeated string partition_by = 3;
    repeated OrderByClause order_by = 4;
    int32 offset = 5;
    int32 buckets = 6;
}

message CTEClause {
    string cte_name = 1;
    string cte_query = 2;
    bool recursive = 3;
    repeated CTEClause additional_ctes = 4;
}

message SubqueryClause {
    string subquery_type = 1;
    string field = 2;
    string subquery = 3;
    string alias = 4;
}

message CaseClause {
    repeated CaseWhen when_clauses = 1;
    string else_value = 2;
    string alias = 3;
}

message CaseWhen {
    string condition = 1;
    string then_value = 2;
}

message UpsertClause {
    repeated string conflict_fields = 1;
    repeated QueryField update_fields = 2;
    string conflict_action = 3;
}

message BulkInsertRow {
    repeated QueryField fields = 1;
}

message SetOperationClause {
    string operation_type = 1;
    RelationalQuery left_query = 2;
    RelationalQuery right_query = 3;
}